# json-parser-c

./: .gitignore  CMakeLists.txt  README.md
src/: lexer.c  node.c  parser.c  token.c
src/include/: lexer.h  node.h  parser.h  token.h
tests/: CMakeLists.txt
tests/examples/: asset.json  quiz.json
tests/src/: main.c
